# testproj-meson-protoc

./: .gitignore  meson.build  test.cc
